# sizelint

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: actionlint.yml  ci.yml  update-flake-lock.yml
docs/: sizelint.1.scd
nix/: checks.nix  crane.nix  devshells.nix  formatter.nix  meta.nix  packages.nix
src/: app.rs  cli.rs  config.rs  discovery.rs  error.rs  git.rs  lib.rs  log.rs  main.rs  output.rs  rules.rs
src/assets/: config.toml
src/rules/: mod.rs
tests/: file_discovery.rs  git_diff_discovery.rs
