[package]
name = "sizelint"
version = "0.1.3"
edition = "2024"
description = "Lint your working tree based on file size"
license = "MIT"
authors = ["Alexander Kenji Berthold"]
documentation = "https://github.com/a-kenji/sizelint"
homepage = "https://github.com/documentation/sizelint"
repository = "https://github.com/documentation/sizelint"
keywords = ["git", "linter", "formatter", "file-size", "ci-cd"]
categories = [
  "command-line-utilities",
  "development-tools",
  "development-tools::testing",
]
include = ["src/**/*", "LICENSE", "README.md", "tests/**/*"]

[dependencies]
clap = { version = "4.5.42", features = ["derive", "suggestions", "wrap_help"] }
clap_complete = "4.5.64"
colored = "3.0.0"
globset = "0.4.18"
ignore = "0.4.25"
miette = { version = "7.6.0", features = ["fancy"] }
rayon = "1.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
toml = "0.9.11"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.24.0"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = true

[lints.rust]
unsafe_code = "forbid"
